<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".story.AddStoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivAdd"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/ic_place_holder"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:gravity="center"
                android:orientation="horizontal">
                
                <Button
                    android:id="@+id/cameraAdd"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:text="@string/camera"/>
                
                <Button
                    android:id="@+id/galleryAdd"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_button"
                    android:layout_marginStart="10dp"
                    android:text="@string/gallery"/>
            </LinearLayout>
            
            <EditText
                android:id="@+id/etAdd"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/boxdesc"
                android:gravity="start"
                android:hint="@string/descadd"/>

            <Button
                android:id="@+id/uploadAdd"
                android:layout_width="380dp"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/upload"
                android:background="@drawable/rounded_button"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>