<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <ProgressBar
        android:id="@+id/progressbar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/fixedstori" />

        <TextView
            android:id="@+id/tvLogin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginMessage"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:alpha="0"
            tools:alpha="100"/>

        <TextView
            android:id="@+id/tvLogin2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descMessage"
            android:alpha="0"
            tools:alpha="100"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/punyaemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:alpha="0"
            tools:alpha="100"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <EditText
                android:id="@+id/tilEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/punyapassw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:alpha="0"
            tools:alpha="100"
            android:layout_marginTop="6dp"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:endIconMode="password_toggle">

            <com.example.storyup.customview.CustomViewPassword
                android:id="@+id/tilPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="8dp"
            android:text="@string/btnLogin"
            android:alpha="0"
            tools:alpha="100"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
